Added contract dto classes for response mapping for different search criteria. Added method to mup service to get all documents no matter the user. Updated opendata service to work with newly added contract classes. Implemented excel exporter to generate excel file filled with data for further use.